created psuedo code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <h1>Word Guess</h1>
     <h2 id="timer">0</h2>
+    <section id="win-loss">
+        
+    </section>
     <button id="start-game">Begin</button>
+    <section id="word-box"></section>
    <script src="./script.js"></script>
 </body>
 </html>
