--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
     </section>
     <button id="start-game">Begin</button>
-    <section id="word-box"></section>
+    <section id="word-box" id="key" id="display"></section>
    <script src="./script.js"></script>
 </body>
 </html>
