fixed start button event listener function

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <h1>Word Guess</h1>
     <h2 id="timer">0</h2>
     <section id="win-loss">
-        
+       <h3>Wins: <span id="wins">0</span> </h3> 
+       <h3>Losses: <span id="losses">0</span> </h3> 
     </section>
     <button id="start-game">Begin</button>
-    <section id="word-box" id="key" id="display"></section>
+    <section id="word-box" class="key display"></section>
    <script src="./script.js"></script>
 </body>
 </html>
